css/styles.css
/* ... */
.socials-link:hover .socials-icon,
.socials-link:focus .socials-icon {
  fill: var(--bg-color);
}

.burger-menu {
  display: none;
}

.nav-list {
  display: flex;
  flex-direction: row;
  gap: 32px;

  padding: 30px 0px 24px 60px;
}

.nav-link {
  position: relative;

  font-weight: 700;
  line-height: 1.625;
  color: var(--bg-color);

  transition: color var(--transition);
}

.nav-link:hover,
.nav-link:focus {
  color: var(--accent);
}

.nav-link.active {
  color: var(--accent);
}

.nav-link.active::after {
  content: "";

  position: absolute;
  bottom: -31px;
  left: 0;
  display: block;

  width: 100%;
  height: 4px;

  background-color: var(--accent);
}

.phone {
  height: 100%;
  padding: 42px 0px 43px 23px;
}

.phone-link {
  display: flex;
  flex-direction: row;
  gap: 14px;
  align-items: center;
}

.phone-icon-frame {
  display: flex;
  justify-content: center;
  align-items: center;

  width: 60px;
  height: 60px;

  background-color: var(--accent);
  
  transition: background-color var(--transition);
}

.phone-icon {
  fill: var(--bg-color);

  transition: transform var(--transition);
}

.phone-link:hover .phone-icon,
.phone-link:focus .phone-icon {
  transform: scale(1.2);
}

.phone-text {
  display: flex;
  flex-direction: column;
  gap: 1px;
}

.phone-text-cta {
  color: var(--contacts-color);
  font-size: 14px;
  line-height: 1.714;
}

.phone-text-number {
  color: var(--bg-color);
  font-family: "Jost", sans-serif;
  font-size: 16px;
  font-weight: 600;
  line-height: 1.625;
}

/* --------- HERO --------- */

.hero {
  position: relative;

  padding-bottom: 150px;
  margin-bottom: 143px;
}

.hero-wrapper {
  background: url(../assets/img/bigger-line.webp),
    url(../assets/img/smaller-line.webp),
    linear-gradient(
      to bottom,
      rgba(14, 14, 14, 0.6) 0%,
      rgba(14, 14, 14, 0.9) 100%
    ),
    url(../assets/img/hero.webp);
  background-position: bottom 0 left 0, bottom 0 left 0, center,
    center;
  background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
  background-size: auto, auto, cover, cover;
}

.hero-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;

  width: 100%;
  max-width: 1607px;

  margin: 0 auto;
  padding: 49px 12px 72px 12px;
}

.hero-text {
  width: 901px;
  padding-top: 149px;
  padding-bottom: 124px;
}

.hero-title {
  margin-bottom: 6px;

  color: var(--bg-color);
  font-family: "Jost", sans-serif;
  font-size: 158px;
  font-weight: 600;
  line-height: 0.873;
}

.hero-descr {
  margin-bottom: 43px;

  color: var(--light-text);
  font-size: 24px;
  line-height: 1.417;
}

.button {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;

  width: fit-content;
  padding: 17px 35px;

  font-family: "Jost", sans-serif;
  font-size: 16px;
  font-weight: 600;
  line-height: 1.625;

  border: 1px solid var(--dark);

  background-color: var(--bg-color);

  color: var(--dark);
  fill: var(--dark);
  
  cursor: pointer;

  transition: background-color var(--transition), transform var(--transition),
    color var(--transition), fill var(--transition);
}

.button.accent {
  border: 1px solid transparent;

  background-color: var(--accent);

  color: var(--bg-color);
  fill: var(--bg-color);
}

.button.accent:hover,
.button.accent:focus {
  transform: scale(1.05);
}

.hero-portrait {
  width: 640px;
  height: 722px;

  background-image: url(../assets/img/portrait-bg.svg);
  background-repeat: no-repeat;
  background-position: bottom right;
  background-size: contain;
}

.front-loader {
  position: absolute;
  bottom: 0;
  left: 720px;
}

.crane {
  position: absolute;
  bottom: -87px;
  left: 69px;
}

/* --------- SERVICES --------- */

.container-services {
  display: flex;
  flex-direction: row;
  gap: 75px;
}

.services-text {
  width: 476px;

  background-image: url(../assets/img/man.webp);
  background-repeat: no-repeat;
  background-size: 70px 70px;
  background-position: right 0 bottom 31px;
}

.section-name {
  display: inline-block;
  position: relative;

  margin-left: 25px;
  margin-bottom: 15px;
  
  color: var(--dark);

  font-family: "Jost", sans-serif;
  font-size: 16px;
  font-weight: 600;
  line-height: 1.625;
}

.section-name::before {
  content: "";
  display: block;
  position: absolute;
  top: calc(50% - 1px);
  left: -25px;

  width: 15px;
  height: 1px;

  background-color: var(--accent);
}

.section-title {
  color: var(--dark);
  font-family: "Jost", sans-serif;
  font-size: 52px;
  font-weight: 600;
  line-height: 1.192;
}

.section-title.services-section-title {
  margin-bottom: 9px;
}

.button:hover,
.button:focus {
  border: 1px solid transparent;

  background-color: var(--accent);
  
  color: var(--bg-color);
  fill: var(--bg-color);
}

.section-descr {
  margin-bottom: 43px;
}

.swiper.swiper-1 {
  width: 746px;
  height: 418px;
}

.swiper-slide.swiper-first {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-between;

  width: 306px;
  height: 100%;
  padding: 24px;

  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;

  overflow: hidden;
}

.swiper-slide.swiper-first::before {
  content: "";
  position: absolute;
  inset: 0;
  z-index: 0;

  background: linear-gradient(to bottom, rgba(5, 0, 0, 0) 0%, rgba(14, 14, 14, 1) 100%);
}

.swiper-slide.swiper-first > * {
  position: relative;
  z-index: 1;
}

.swiper-first-1st {
  background-image: url(../assets/img/building-construction.webp);
}

.swiper-first-2nd {
  background-image: url(../assets/img/building-design.webp);
}

.swiper-first-3rd {
  background-image: url(../assets/img/construction-management.webp);
}

.swiper-first-4th {
  background-image: url(../assets/img/renovation-services.webp);
}

.swiper-first-5th {
  background-image: url(../assets/img/structural-engineering.webp);
}

.swiper-first-6th {
  background-image: url(../assets/img/project-planning.webp);
}
/* ... */

